# maelstrom-examples

./: .gitignore  README.md  pyproject.toml
fast_predator_prey/: Predator-Prey-GP.ipynb  Predator-Prey-benchmarking.ipynb  predator_prey.py  primitives.py  pyproject.toml
fast_predator_prey/configs/: maelstrom.cfg
mountain_car/: data.txt  main.py  pyproject.toml
mountain_car/configs/: main.cfg
mountain_car/mountain_car/: __init__.py  evaluation.py  primitives.py
predator_prey/: CanonicalGPCoevolution.ipynb  CanonicalIslandCoevolution.ipynb  IndividualSaving.ipynb  IslandCoevolution.ipynb  LocalChampionAnalysis.ipynb  MaelstromCoevolution.ipynb  Plotting.ipynb  PredatorEvolution.ipynb  PreyEvolution.ipynb  canonicalGPIsland.py  canonicalPopulation.py  competition.py  driver.py  findChampions.py  globalPerformanceEstimation.py  primitives.py  pyproject.toml
predator_prey/configs/: TestMaelstrom.cfg  TestTraditional.cfg  default.cfg  generational100large.cfg  generational100small.cfg  generational50.cfg  maelstrom.cfg  maelstromBestMigration.cfg  maelstromGenerational.cfg  maelstromLowSampleLowPeriodBestMigrants.cfg  maelstromRandomMigration.cfg  nurseryMaelstrom.cfg  nurseryOnly.cfg  steadystateLowSampleNoHoF.cfg  traditionalLargePop.cfg
predator_prey/configs/validation/: generational100_1000.cfg  generational100_200.cfg  generational50_500.cfg  maelstromBaseline.cfg  maelstromBestMigration.cfg  maelstromGenerational.cfg  maelstromHighPeriod.cfg  maelstromLowPeriod.cfg  maelstromLowPeriodLowSample.cfg  maelstromLowSampleLowPeriodBestMigrants.cfg  maelstromRandomMigration.cfg  steadystate600_300.cfg  steadystateBaseline.cfg  steadystateHighSample.cfg  steadystateLowSample.cfg  steadystateLowSampleNoHoF.cfg  steadystateNoHoF.cfg
predator_prey/logs/Nov2020/longtraditional/2023-03-14-20-15/: config.cfg
predator_prey/logs/debug/maelstromTest/2023-03-14-20-15/: config.cfg
predator_prey/logs/debug/maelstromTest/2023-03-14-20-51/: config.cfg
predator_prey/logs/debug/maelstromTest/2023-03-14-21-05/: config.cfg
slime_volleyball/: main.py  pyproject.toml  requirements.txt  temp.py
slime_volleyball/configs/: basic.cfg  maelstrom.cfg  main.cfg  mix.cfg  volley.cfg
slime_volleyball/slime_volleyball/: __init__.py  primitives.py
slime_volleyball/slime_volleyball/fitness/: basic.py  mix.py  volley.py
swimmer/: data.txt  main.py  pyproject.toml  swimmer.ipynb
swimmer/configs/: main.cfg
swimmer/swimmer/: __init__.py  evaluation.py  primitives.py
