[tool.poetry]
name = "fast-predator-prey"
version = "0.1.0"
description = ""
authors = ["roberte777 <robewilkes@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maelstrom-evolution = "^0.1"
snake-eyes-parser = "^0.1"
gymnasium = {extras = ["classic-control"], version = "^0.28.1"}
matplotlib = "^3.7.1"
jaxlib = "^0.4.14"
jax = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
