[tool.poetry]
name = "mountain-car"
version = "0.1.0"
description = ""
authors = ["roberte777 <robewilkes@yahoo.com>"]
readme = "README.md"
packages = [{include = "mountain_car"}]

[tool.poetry.dependencies]
python = "^3.11"
maelstrom = {path = "../../maelstrom-staging"}
snake-eyes = {path = "../../snake_eyes"}
gymnasium = {extras = ["classic-control"], version = "^0.28.1"}
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
