[tool.poetry]
name = "maelstrom-examples"
version = "0.1.0"
description = ""
authors = ["roberte777 <robewilkes@yahoo.com>"]
readme = "README.md"
packages = [{include = "maelstrom_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
maelstrom = {path = "../../maelstrom-staging"}
matplotlib = "^3.7.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
