[tool.poetry]
name = "swimmer"
version = "0.1.0"
description = ""
authors = ["roberte777 <robewilkes@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maelstrom-evolution = "^0.1"
snake-eyes-parser = "^0.1"
gymnasium = {extras = ["mujoco"], version = "^0.28.1"}
matplotlib = "^3.7.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
